# ChangeLog for app-portage/trickyfetch
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*trickyfetch-8.3-r1 (17 Dec 2013)

  06 Jul 2014; Martin Väth <martin@mvath.de>:
  New style github tarball

  15 Mar 2014; Martin Väth <martin@mvath.de>:
  Use optfeature

  17 Dec 2013; Martin Väth <martin@mvath.de>:
  Fix sh path

*trickyfetch-8.3 (21 Nov 2013)

  21 Nov 2013; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild.

*trickyfetch-8.2 (02 Nov 2013)

  02 Nov 2013; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild. Shebang care

*trickyfetch-8.1 (28 Jan 2013)

  10 Sep 2013; Martin Väth <martin@mvath.de>:
  Install zsh-completion unconditionally according to gentoo policy

  14 Aug 2013; Martin Väth <martin@mvath.de>:
  Simplify EPREFIX (without revision bump)

  28 Jan 2013; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild.

  10 Jun 2013; Martin Väth <martin@mvath.de>:
  Improve eix message

*trickyfetch-8.0 (21 Jan 2013)

  21 Jan 2013; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild.
  Support /etc/trickyfetch.conf instead of IUSE=getdelta

*trickyfetch-7.3 (25 Nov 2012)

  01 Dev 2012; Martin Väth <martin@mvath.de>:
  Remove USE=eix; only log recommendation if appropriate

  25 Nov 2012; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild. Make getdelta support optional

*trickyfetch-7.2 (11 Nov 2012)

  11 Nov 2012; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild.

*trickyfetch-7.1 (23 Aug 2012)

  28 Sep 2012; Martin Väth <martin@mvath.de>:
  Bump to EAPI=5

  23 Aug 2012; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild.

*trickyfetch-7.0 (16 Jun 2012)

  16 Jun 2012; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild. Make NODELTA a masklist. Support
  DELTA_EXCLUDE. Do not call getdelta on later mirrors. Quicker with eix.

*trickyfetch-6.9 (09 Jun 2012)

  09 Jun 2012; Martin Väth <martin@mvath.de>: