@@ -1,1 +1,1 @@
-DIST trickyfetch-8.3.tar.gz 10601 SHA256 4a94a7c3d5e3d79e6346ef544f1c02fe3abc2df9da1c58f7d306fdea72995e95 SHA512 bd219a88df4207487e9f84ae568a45ac741c7a68934c95211af36b60cf58ea466ad79a60bf8a107b7106172964f5ce96fb244824ff63171665f6a1c259d341d7 WHIRLPOOL ec9a8147f8d00c2fda34806413de99f476ca55ae69ecf75329d05284f2383ab486a42ad825b0abbf7cbaaa18a4ea8efc2d24a026a281ce88cd83045ccefe7e17
+DIST trickyfetch-8.4.tar.gz 10989 SHA256 fc5e51e63a13e1c2a2d3bfdfe579baefa18068d6f4febe3fb1c5c41a27cc0046 SHA512 4c3069ecd1250a37d5a440f5d6fb7b2dcd8861aabefa787ef50f4c89ed225a46002d0d2c1ffd8344c5960111eec19d1f61343ffa36b0be966c9b4b8f43ff9414 WHIRLPOOL 03223c797af94a6818fc276c1f26583fa6970d186200c65f21197fdfb1d267aafb655ac9d33a17e86e0b7c6561720d12423f9d8b6ca1d701b00441d062377431
