@@ -1,1 +1,2 @@
 DIST noscript-2.6.8.33.xpi 538443 SHA256 b2ea02e9ecf05d174a6d5b4cf1ee13d63cdad1c016160f3836aeeaa96790b189 SHA512 89fa2c84c5e2ecd78c9051c77fef5632b4b58a6578ce9437a5417bec2793ba0751fa657ea8d6e805de552e1a64ec9a6c1feec230a0eb8285af9caf422a8a0384 WHIRLPOOL 99316a6e288b05444620c9a6109b7ecb69146a0f2762918e5596f22315f998542ea611b924ff93fbb571faf41c98c7296d027cd349fe23e1486e363c88323956
+DIST noscript-2.6.8.34.xpi 554512 SHA256 f7d6138b434471db504fdb4e9ac42ad80ed90122ab5d0c7be201a86774beed29 SHA512 e3dc95d7d870136bd9438207372198a3f27ee252fe2a5493949a1910ab2872fa2cb8ee5096d0097298e13ee4ebcc65e4600a07a6cdfd8a45a520d61e061f92bd WHIRLPOOL a33a5f626e4c4b1c2063676ee5ff506f19b024c644c65c761f65df391f74586cf7a7f8e040127d985d6256f5581f85878c395f992b7bd9992993a6dcff212645
