@@ -2,6 +2,11 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*noscript-2.6.8.34 (20 Jul 2014)
+
+  20 Jul 2014; Martin Väth <martin@mvath.de>:
+  Version bump
+
 *noscript-2.6.8.33 (08 Jul 2014)
 
   08 Jul 2014; Martin Väth <martin@mvath.de>:
