@@ -2,6 +2,11 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*trickyfetch-8.4 (20 Jul 2014)
+
+  20 Jul 2014; Martin Väth <martin@mvath.de>:
+  Version bump, remove old ebuild
+
 *trickyfetch-8.3-r1 (17 Dec 2013)
 
   06 Jul 2014; Martin Väth <martin@mvath.de>:
